--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<!-- Nice place to describe your site in a sentence or two -->
 
 				<p>
-					<a href="https://linktr.ee/galleryretail" class=" btn btn-default btn-lg">BREAD NJ</a> <a href="http://www.linktr.ee/galleryretail" class=" btn btn-default btn-lg">NEWARK FIRST FRIDAYS</a> 
+					<a href="https://bit.ly/3oE5BOI" class=" btn btn-default btn-lg">CALL FOR EVENT PARTNERS/OFFICIAL STOPS</a> <a href="http://www.linktr.ee/newarkffr" class=" btn btn-default btn-lg">NEWARK FIRST FRIDAYS</a> 
 				</p>
 				<br>
 				<br>
